# persuadable-defender

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ab-testing.yml  assay-matrix.yml  bazel-buildifier.yml  ci-coverage.yml  ci-python.yml  codeql.yml  deploy-bluegreen.yml  deps-audit.yml  docker-build.yml  docs-build.yml  license-compliance.yml  lint-typecheck.yml  policy-report.yml  progressive-rollout.yml  rollback-release.yml  secrets-scan.yml  tag-release.yml  terraform-plan.yml
clcone_lab/: CLcone_Assays.py  __init__.py  barrier_tame_assay.py  envs.py
docs/: architecture.md  architecture_secure.md  ato_and_stig_checklist.md  barriers_reference.md  index.md  prompts.md  research_outline.md  workflows.md
examples/: barriers_example.json
gao_orchestrator/: GAO_Orchestrator.py  __init__.py
infra/aws/: README.md  main.tf  variables.tf
infra/aws-nitro/: README.md  ec2_nitro.tf  iam.tf  main.tf  network.tf  variables.tf
infra/aws/ecs/: main.tf
infra/aws/network/: main.tf
infra/oci/: README.md  containers.tf  iam.tf  main.tf  network.tf  variables.tf
infra/oci-confidential/: README.md  compute_conf.tf  main.tf  network.tf  variables.tf
malignant_agent/: MalignantAgent.py  __init__.py  barrier_adapter.py
scripts/: deployment_manager.py  generate_policy_report.py
tests/: test_barrier_tame_assay.py  test_clcone_assays.py  test_gao_orchestrator.py  test_malignant_agent.py  test_malignant_barrier_adapter.py  test_new_metrics.py
(+1 files in other folders)
